<resources>
    <string name="app_name">Mona</string>
    <string name="welcome_text">Welcome</string>
    <string name="username_text">Username or Email</string>
    <string name="username_hint">example@example.com</string>
    <string name="password_text">Password</string>
    <string name="password_hint">●●●●●●●●</string>
    <string name="login_button">Log In</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="sign_up_text">Don’t have an account? Sign Up</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test2">test2</string>
    <string name="category_icon_desc">Category Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">Mona</string>
    <string name="google_maps_key">AIzaSyDSCnOXFsAjV7v-JuC5c2IGbU9ZXuJpn1A</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="example_hint">Example</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="back_btn">Back</string>
    <string name="mona_desc">Your Money Management App</string>
    <string name="category">Category</string>
    <string name="placeholder_money">Rp 10.000.000</string>
    <string name="placeholder_title">Salary</string>
    <string name="placeholder_dates">18:27 - April 30</string>
    <string name="placeholder_minus_money">-Rp 10.000.000</string>
    <string name="total_expense">Total Expense</string>
    <string name="total_balance">Total Balance</string>
    <string name="good_morning">Good Morning</string>
    <string name="greetings_text">Hi, Name</string>
    <string name="food_recommendation">Food Recommendation</string>
    <string name="add_income">Add Income</string>
    <string name="amount_text">Amount</string>
    <string name="category_text">Category</string>
    <string name="date_text">Date</string>
    <string name="expense_text">Expense Title</string>
    <string name="btn_save">save</string>
</resources>