<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_green"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cr40bff003c43"
        android:orientation="horizontal"
        android:paddingVertical="9dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cr40bff003c43"
            android:paddingVertical="9dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/back_btn"
                android:src="@drawable/baseline_arrow_back_24"
                app:backgroundTint="@color/dark_green"
                app:elevation="0dp"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/create_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/create_account"
                android:textStyle="bold"
                android:textColor="#E3FEF7"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/background_crop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background_crop"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="5dp"
            android:text="@string/name"
            android:textColor="#E3FEF7"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/full_name"
            android:textColorHint="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_background"
            android:orientation="vertical"
            android:hint="@string/example_hint"
            android:textSize="16sp"
            android:paddingHorizontal="34dp"
            android:paddingVertical="15dp" />

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email"
            android:textColor="#E3FEF7"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/username_hint"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:orientation="vertical"
            android:paddingHorizontal="34dp"
            android:paddingVertical="15dp" />

        <TextView
            android:id="@+id/password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="5dp"
            android:text="@string/password_text"
            android:textColor="#E3FEF7"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:hint="@string/password_hint"
            android:textSize="16sp"
            android:textColorHint="@color/gray"
            android:paddingHorizontal="34dp"
            android:paddingVertical="15dp" />

        <TextView
            android:id="@+id/confirm_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="5dp"
            android:text="@string/confirm_password"
            android:textColor="#E3FEF7"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/edit_text_background"
            android:orientation="vertical"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textSize="16sp"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:paddingHorizontal="34dp"
            android:paddingVertical="15dp" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="107dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_corner"
            android:gravity="center"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            android:textSize="20sp"
            android:text="@string/sign_up" />

    </LinearLayout>

</LinearLayout>
