<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/r74n0fnasyx5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:layout_marginHorizontal="16dp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/r6bzyxr3763q"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/r7cqca9z3p4a"
            android:textColor="#D9D9D9"
            android:textSize="15sp"
            android:layout_marginBottom="1dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/placeholder_title"/>

        <TextView
            android:id="@+id/rnbiyd3oxc8t"
            android:textColor="#3299FF"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/placeholder_dates"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/rgwgk2acswbq"
        android:layout_width="1dp"
        android:layout_height="35dp"
        android:background="#FF00D09E"
        android:layout_marginTop="13dp"
        android:orientation="vertical"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/category"
        android:textColor="#D9D9D9"
        android:textSize="13sp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/category"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/rjyynzscvznm"
        android:layout_width="1dp"
        android:layout_height="35dp"
        android:background="#FF00D09E"
        android:layout_marginTop="13dp"
        android:orientation="vertical"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/r6riou9opo9"
        android:textColor="#D9D9D9"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:text="@string/placeholder_money"/>

</LinearLayout>
