<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="#FF003C43"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cr40bff003c43"
        android:orientation="horizontal"
        android:paddingVertical="9dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cr40bff003c43"
            android:paddingVertical="9dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/back_btn"
                android:src="@drawable/baseline_arrow_back_24"
                app:backgroundTint="@color/dark_green"
                app:elevation="0dp"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="#E3FEF7"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_half_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="1dp"
            android:background="@drawable/bottom_half_background"
            android:orientation="vertical"
            android:paddingVertical="96dp">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginBottom="10dp"
                android:text="@string/username_text"
                android:textColor="#E3FEF7"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/username_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginBottom="29dp"
                android:background="@drawable/edit_text_background"
                android:autofillHints="username"
                android:hint="@string/username_hint"
                android:textColorHint="@color/gray"
                android:paddingHorizontal="34dp"
                android:paddingVertical="15dp"
                android:textColor="#093030"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="53dp"
                android:layout_marginBottom="5dp"
                android:text="@string/password_text"
                android:textColor="#E3FEF7"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginBottom="91dp"
                android:background="@drawable/edit_text_background"
                android:autofillHints="password"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:textColorHint="@color/gray"
                android:inputType="textPassword"
                android:paddingVertical="17dp"
                android:paddingStart="34dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="107dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_corner"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:text="@string/login_button" />

        </LinearLayout>
    </LinearLayout>