<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF003C43"
    tools:context=".DetailCategoriesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="44dp"
            android:text="@string/greetings_text"
            android:textColor="#D9D9D9"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_greeting"
            android:textColor="#D9D9D9"
            android:textSize="14sp"
            android:layout_marginBottom="39dp"
            android:layout_marginStart="38dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/good_morning" />

        <LinearLayout
            android:id="@+id/rhb39zmaum1p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="24dp"
            android:layout_marginHorizontal="39dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/r1fqnvoldstu"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/rg2zws383u5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/r0ia1zda40vcv"
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/sffd9d9d9sw1cr3"
                        android:paddingHorizontal="3dp"
                        android:layout_marginEnd="7dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/r98hyyolb2ns"
                            android:layout_width="12dp"
                            android:layout_height="9dp"
                            android:layout_marginTop="3dp"
                            android:scaleType="fitXY" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/total_balance_title"
                        android:textColor="#D9D9D9"
                        android:textSize="12sp"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/total_balance"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/total_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_money"
                    android:textStyle="bold"
                    android:textColor="#F1FFF3"
                    android:textSize="20sp"/>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:id="@+id/remcfvnn8l6m"
                android:layout_width="1dp"
                android:layout_height="42dp"
                android:background="#FFDFF7E2"
                android:padding="20dp"
                android:orientation="vertical"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:id="@+id/rxkonm1xxnc"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/rp9nhz9orunn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="7dp"
                    android:layout_marginHorizontal="11dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/rmul00min1xf"
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/sffd9d9d9sw1cr3"
                        android:paddingHorizontal="3dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/rxwpduns4ofh"
                            android:layout_width="match_parent"
                            android:layout_height="5dp"
                            android:layout_marginTop="3dp"
                            android:scaleType="fitXY"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/total_expense_title"
                        android:textColor="#D9D9D9"
                        android:textSize="12sp"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/total_expense"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/total_expense"
                    android:textColor="#3299FF"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/placeholder_minus_money"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_weight="1"
            android:background="@drawable/background_crop"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTransactions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
