<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FF003C43"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cr40bff003c43"
        android:orientation="vertical"
        android:paddingVertical="9dp">


        <TextView
            android:id="@+id/rmci55gqrzwp"
            android:textColor="#d9d9d9"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="Add Expenses"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/r7qxqfxzeod"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_crop"
        android:paddingTop="39dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ri65hsie2me9"
            android:textColor="#d9d9d9"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="66dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/date_text"
            />
        <EditText
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="18dp"
            android:background="@drawable/cr18bd4e3fef7"
            android:paddingStart="18dp"
            android:padding="10dp"
            android:textColor="@color/black"

            android:inputType="none"
            android:focusable="false"
            android:layout_marginBottom="34dp"
            android:layout_marginHorizontal="55dp"
            android:orientation="horizontal" />
        <TextView
            android:id="@+id/catgeory_input"
            android:textColor="#d9d9d9"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="65dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/category_text"
            />
        <Spinner
            android:id="@+id/category_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cr18bd4e3fef7"
            android:paddingVertical="13dp"
            android:textColor="@color/black"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="34dp"
            android:layout_marginHorizontal="55dp"/>

        <!-- Initially hidden -->
        <Spinner
            android:id="@+id/food_category_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="55dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/cr18bd4e3fef7"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp"
            android:textColor="@color/black"
            android:visibility="visible" />

        <TextView
            android:id="@+id/ro5aukd30olm"
            android:textColor="#d9d9d9"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="65dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/amount_text"
            />
        <EditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cr18bd4e3fef7"
            android:paddingVertical="14dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:paddingHorizontal="18dp"
            android:layout_marginBottom="35dp"
            android:layout_marginHorizontal="54dp"
            android:orientation="vertical">
        </EditText>
        <TextView
            android:id="@+id/rvzn6spdeklk"
            android:textColor="#d9d9d9"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="66dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/expense_text"
            />
        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cr18bd4e3fef7"
            android:paddingVertical="14dp"
            android:paddingHorizontal="18dp"
            android:layout_marginBottom="15dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:layout_marginHorizontal="55dp"
            android:orientation="vertical">
        </EditText>
        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/cr30bff029eb1"
            android:paddingVertical="12dp"
            android:layout_marginHorizontal="130dp"
            android:text="@string/btn_save"
            android:orientation="vertical">
        </Button>



    </LinearLayout>

</LinearLayout>